# sphinx-coverity-extension

./: .buildinfo  .codeclimate.yml  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.rst  deviate.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  warnings_config.json  warnings_config.yml
.github/workflows/: jobs.test.env  python-package.yml
_sources/: deviate.rst.txt
_static/: theme_overrides.css  traceability.js
example/: .env.example  Makefile  conf.py  deviate.rst  index.rst  pip-dependencies.txt
mlx/: coverity.py  coverity_item_element.py  coverity_logging.py  coverity_services.py
mlx/coverity/: __init__.py  coverity.py  coverity_item_element.py  coverity_logging.py  coverity_services.py
mlx/coverity/coverity_directives/: coverity_defect_list.py
mlx/coverity_directives/: coverity_defect_list.py
mlx/directives/: coverity_defect_list.py
tests/: columns.json  columns_keys.json  defect_soap.xml  fake_json.json  filters.py  test_coverity.py
