[metadata]
description-file = README.rst

[bdist_wheel]
universal=1

[tool:pytest]
norecursedirs= .tox

[flake8]
exclude = .git,*conf.py,build,dist,tests/docs
max-line-length = 120
per-file-ignores =
    mlx/coverity.py:E402  # module level not at top of file

[check-manifest]
ignore=
    *.yml
    example/_build*

[pycodestyle]
exclude = .git,*conf.py,build,dist,tests/docs
max-line-length = 120
